[package]
name = "gacha-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gacha_sol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", default-features = false, features = [
    "mint",
    "token",
] }
spl-token-2022 = { version = "8", features = ["no-entrypoint"] }
spl-token-confidential-transfer-proof-extraction = "0.3"
spl-token-confidential-transfer-ciphertext-arithmetic = "0.3"
spl-pod = "0.5.1"


bytemuck = "1.22.0"
