[package]
name = "gacha-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gacha_sol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
# anchor-spl = { version = "0.31.1", default-features = false, features = [
#     "mint",
#     "token",
#     "token_2022",
# ] }
anchor-spl = { version = "0.31.1" }
spl-token-2022 = { version = "8", features = ["no-entrypoint"] }
spl-token-confidential-transfer-proof-extraction = "0.3"
spl-token-confidential-transfer-ciphertext-arithmetic = "0.3"
spl-pod = "0.5.1"
bytemuck = "1.22.0"
base64 = "*"

[dev-dependencies]
solana-program = "2.2.1"
solana-sdk = "2.2.1"
solana-program-test = "2.2.1"
solana-banks-interface = "2.2.1"
spl-associated-token-account = "6"
spl-token-client = { git = "https://github.com/solana-program/token-2022", rev = "7ac4e4a" }
spl-token-confidential-transfer-proof-extraction = "0.3.0"
spl-token-confidential-transfer-proof-generation = "0.4.0"

solana-program-simulator = { git = "https://github.com/pupplecat/solana-program-simulator", branch = "solana_2", features = ["anchor"]}
anyhow = "^1"
async-trait = "0.1.83"
cargo_metadata = "0.19.1"
rand = "0.9.1"
sha2 = "0.10.8"
tokio = "^1"
